<resources>
    <string name="app_name">DevTestHH</string>
    <string name="button_text_enter">ВОЙТИ</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Электронная почта</string>
    <string name="toolbar_name_authorization">Авторизация</string>
    <string name="create">СОЗДАТЬ</string>
    <string name="passwordRules">Условие ввода пароля</string>
</resources>